--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -332,7 +332,7 @@
 
 <div class="Move"><h3 class="MoveName">武器鑑識 (Eye for Weaponry)</h3>
 <p class="NoIndent">
-	當你看向敵人的武器時，向GM詢問它能夠造成多少傷害。</p></div>
+	當你<strong>檢視敵人的武器</strong>時，向GM詢問它能夠造成多少傷害。</p></div>
 
 <div class="Move"><h3 class="MoveName">卓越勇士 (Superior Warrior)</h3>
 <p class="NoIndent">
