--- a/classes/ranger/index.html
+++ b/classes/ranger/index.html
@@ -248,7 +248,7 @@
 
 <div class="Move"><h3 class="MoveName">毒蛇雙襲 (Viper’s Strike)</h3>
 <p class="NoIndent">
-	當你使用二把武器同時襲向一個敵人時，為你副手武器的打擊額外造成 1d4 傷害。</p></div>
+	當你使用二把武器同時襲向一個敵人時，你因為副手武器的打擊而額外造成 1d4 傷害。</p></div>
 
 <div class="Move"><h3 class="MoveName">保護色 (Camouflage)</h3>
 <p class="NoIndent">
@@ -292,7 +292,7 @@
 <div class="Move"><h3 class="MoveName">毒蛇獠牙 (Viper’s Fangs)</h3>
 <p class="Requirement">取代: 毒蛇雙襲</p>
 <p class="NoIndent">
-	當你使用二把武器同時襲向一個敵人時，為你副手武器的打擊額外造成 1d8 傷害。</p></div>
+	當你使用二把武器同時襲向一個敵人時，你因為副手武器的打擊而額外造成 1d8 傷害。</p></div>
 
 <div class="Move"><h3 class="MoveName">巨龍的軟腹 (Smaug’s Belly)</h3>
 <p class="NoIndent">
