--- a/classes/thief/index.html
+++ b/classes/thief/index.html
@@ -139,7 +139,7 @@
 <div id="racialmoves"><div class="Move"><h3 class="MoveName">半身人</h3>
 <p class="NoIndent">當你以遠程武器進行攻擊時，你額外造成 +2 傷害。</p></div>
 <div class="Move"><h3 class="MoveName">人類</h3>
-<p class="NoIndent">你是個專業人士。當你進行與犯罪活動有關的憶述見聞或審視現狀動作時，獲得 +1 加值﹐</p></div></div>
+<p class="NoIndent">你是個專業人士。當你進行與犯罪活動有關的憶述見聞或審視現狀動作時，獲得 +1 加值。</p></div></div>
 
 <div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div class="Move"><h3 class="BasicMoveName">陷阱專家 (Trap Expert)</h3>
@@ -201,7 +201,7 @@
 選擇你的武器：
 <ul><li class="Option">匕首 (<span class="Tags">觸及, 1 重量</span>) 和 短劍 (<span class="Tags">近身, 1 重量</span>)</li>
 <li class="Option">刺劍 (<span class="Tags">近身, 靈巧, 1 重量</span>)</li></ul>
-選擇一項遠程武器：：
+選擇一項遠程武器：
 <ul><li class="Option">3 飛刀 (<span class="Tags">投擲, 短程, 0 重量</span>)</li>
 <li class="Option">劣質弓 (<span class="Tags">短程, 2 重量</span>) 和 一綑箭矢 (<span class="Tags">3 彈藥, 1 重量</span>)</li></ul>
 選擇一項：
