--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -122,7 +122,7 @@
 <h2>事前準備</h2>
 <p class="NoIndent">在第一次聚會之前，你會需要列印一些東西。印出：</p>
 <ul>
-	<li>基本動作的副本數份</li>
+	<li>基本動作和特殊動作的影印本數份</li>
 	<li>每個職業的角色卡各一份，雙面印刷</li>
 	<li>牧師和法師的法術列表各一份，雙面印刷</li>
 	<li>GM參考紙</li></ul>
