--- a/introduction/index.html
+++ b/introduction/index.html
@@ -119,66 +119,91 @@
 <p>然而，冒險並不只有輕鬆的英雄主義與高尚的英勇行徑。每當遊俠帶著他的朋友穿越古老森林時，數以百計的危險虎視眈眈地等著咬掉他的頭顱。或許，等待著他們的是流著口水的哥布林部隊，又或許，他們行經的是居住著灰衣女巫的詛咒之森？亦或者，一整群怨靈正飢渴地尋找著用以還魂的肉身屍體。可怕嗎？當然，但是財寶也在那裏。在危險深處，無數被世人遺忘的黃金珠寶和魔法散落在你所熟悉世界的陰暗夾縫之間。除了堅定勇敢的英雄們之外，又有誰能夠取回它們？</p>
 <p>你和你的朋友<b>就是</b>那些英雄。你們踏足他人無法或不願涉足的險地。怪誕之物潛居於這個世界──你準備好面對牠們了嗎？</p>
 <hr/>
-<h2>吟遊詩人 (The Bard)</h2>
+
+<h2>吟遊詩人</h2>
 <p class="NoIndent">冒險者之詩乃是不斷向前之路，是錢幣與戰鬥的榮光。在那些鄉農滿座的酒館中被傳唱的故事，總有些許真實，對吧？那些鼓舞農民與國親的歌謠──那些撫慰野獸或讓人瘋狂的歌謠──必定其來有自。</p>
 <p>當個詩人吧。來，帶著你的巧舌與機智。你說故事，你唱歌謠。一名尋常樂手只會複誦，而真正的吟遊詩人活在其中。繫上你的靴子吧，高貴的演說家。磨利那把小刀，接受呼喚。總得有人要與那些暴徒、惡棍與即將成為英雄的人們並肩作戰。又有誰比你更能傳誦自己的英雄故事？</p>
 <p>沒有別人了。來吧。</p>
-<h2>牧師 (The Cleric)</h2>
+
+<h2>牧師</h2>
 <p class="NoIndent">地城世界的大地就是個被神遺棄的爛攤子。在安全與被祝福的文明之間，佈滿了走動的死屍、各類野獸、以及廣袤的超自然之地。那是個神不存在的世界，而這也正是為何需要你的原因。</p>
 <p>將神之榮光帶給異教徒不只是你的本性──更是你的使命。你持著劍、槌和咒法宣教，劈開粗野的愚蠢之心，植入神聖之籽。有人說，最好讓神常伴你心。你知道那都是狗屁。神只住在刀鋒之上。</p>
 <p>向這個世界證明，誰才是它的主宰。</p>
-<h2>德魯伊 (The Druid)</h2>
+
+<h2>德魯伊</h2>
 <p class="NoIndent">環視火堆周圍，這些人滿是城市的塵埃與汗味，是什麼將你帶到這些人身邊？或許是慈愛吧──你是否如同母熊照看她的幼崽保護著他們？他們現在是你這群的嗎？你可真有群奇怪的兄弟姊妹。不管你有怎樣的靈感，沒有你銳利的感官和更銳利的獠爪，他們註定不會成功。</p>
 <p>你屬於神聖之所；你出生於母土，你的身上戴著她的靈魂之印。你可能也曾有過凡人的生活，或許你也像他們曾居於都城，如今卻已非如此。你拋棄了停滯的定型。聆聽你盟友對他們所雕神像的祈禱，聆聽他們的宗教寓言故事，講述他們將在早已被你拋棄的破爛小鎮中找回的榮耀。</p>
 <p>他們的諸神只是年幼的孩童，他們的鋼鐵只是虛假的保護。你走在古老的路上，披大地為衣。你會拿取屬於你的財寶，但你是否會走上與他們相同的路呢？只有時間知道。</p>
-<h2>戰士 (The Fighter)</h2>
+
+<h2>戰士</h2>
 <p class="NoIndent">這是份爛差事－－日復一日靠著你的盔甲和手上技巧討生活，不顧一切地跳入危險之中。當你在巴爾斯伯格的酒吧為他們兩肋插刀時，沒有人為你吹奏黃金號角。當你將還在尖叫的他們從瘋狂深淵的邊緣拽出時，沒有成群天使為你合唱。什麼都沒有。
 </p>
 <p>忘了他們吧。</p>
 <p>你這麼做是為了膽識與榮耀，是為了戰鬥的呼嘯、以及那熾熱的鮮血。你是鐵打的猛獸。你的朋友或許帶著鋼鑄的鋒刃，然而，戰士，你本身就是鋼鐵。當你的旅伴在荒野營火旁抱怨著他們的傷口，你則驕傲的背起自己的傷疤。</p>
 <p>你即是銅牆鐵壁－－任憑所有撲向你的危險灰飛煙滅。最終，你會是站到最後的那一個。</p>
-<h2>聖武士 (The Paladin)</h2>
+
+<h2>聖武士</h2>
 <p class="NoIndent">地獄正在等候。或寒冰，或烈火，或地城世界中那些該死罪人們所應得的懲罰，構成了此地的永恆折磨。殘虐或者救贖，一切由你。神聖之士，戰爭機器，全善與光明的聖堂武士，是吧？牧師或許在夜裡向天界上蒼祈禱。戰士或許會以「善」之名揮舞利劍。但只有你知道，何謂善。</p>
 <p>眾神之眼，之手，之殺戮神罰，這就是你。你所賜的乃是公義與美德－－乃是正義，乃是願景。你胸懷同伴們所欠缺的，純粹之意念。</p>
 <p>所以引導這些愚者吧，聖武士。擔負起你的聖潔使命，將救贖帶到這個破爛世界。</p>
 <p>敗者毋怨悽慘，對吧？</p>
-<h2>遊俠 (The Ranger)</h2>
+
+<h2>遊俠</h2>
 <p class="NoIndent">與你同行的這些都市兒童。他們可曾聽見孤狼的吠叫？可曾感受過東方荒蕪沙漠的狂風呼嘯？可曾如你那樣以弓刃狩獵？當然他媽的沒有。那就是為什麼他們需要你。</p>
 <p>嚮導、獵手、荒野的造物。你遠遠不只如此。你在荒野中一向孤獨，但那偉大之物的呼喚－－或許可以稱之為命運－－將你與這些都市人的命連繫在了一起。他們或許勇敢。或許強大健壯。但只有你通曉這兩者間的秘密。</p>
 <p>沒有你，他們就會迷失。在鮮血與黑暗之中燒出通往前方的道路吧，神行客。</p>
-<h2>The Thief</h2>
+
+<h2>盜賊</h2>
 <p class="NoIndent">You’ve heard them, sitting around the campfire. Bragging about this battle or that, or about how their gods are smiling on your merry band. You count your coins and smile to yourself—this is the thrill above all. You alone know the secret of Dungeon World: filthy, filthy lucre.</p> 
 <p>Sure, they give you lip for all the times you’ve snuck off alone, but without you, every one of them would have been dissected by a flying guillotine or poisoned straight to death by some ancient needle trap. So let them complain. When you’re done with all this delving you’ll toast their heroes’ graves.</p>
 <p>From your castle. Full of gold. You rogue.</p>
-<h2>The Wizard</h2>
+
+<h2>法師</h2>
 <p class="NoIndent">Dungeon World has rules. Not the laws of men or the rule of some petty tyrant. Bigger, better rules. You drop something—it falls. You can’t make something out of nothing. The dead stay dead, right?</p>
 <p>Oh, the things we tell ourselves to feel better about the long, dark nights.</p>
 <p>You’ve spent so very long poring over those tomes of yours. Conducting experiments that nearly drove you mad and casting summonings that endangered your very soul. For what? For power. What else is there? Not just the power of King or Country but the power to boil a man’s blood in his veins. To call on the thunder of the sky and the churn of the roiling earth. To shrug off the rules the world holds so dear.</p>
 <p>Let them cast their sidelong glances. Let them call you “warlock” or “diabolist.” Who among them can hurl fireballs from their eyes?</p>
 <p>Yeah. Didn’t think so.</p></div>
 <hr>
-<h1>Why?</h1>
-<p class="NoIndent">Why play Dungeon World?</p>
-<p>First, to see the characters do <strong>amazing things</strong>. To see them explore the unexplored, slay the undying, and go from the deepest bowels of the world to the highest peaks of the heavens. To see them caught up in momentous events and grand tragedies.</p>
-<p>Second, to see them <strong>struggle together</strong>. To gather as a party despite their differences and stand united against their foes, or to argue over treasure, debate battle plans, and join in righteous celebration over a victory hard-won.</p>
-<p>Third, because <strong>the world still has so many places to explore</strong>. There are unlooted tombs and dragon hoards dotting the countryside just waiting for quick-fingered and strong-armed adventurers to discover them. That unexplored world has plans of its own. Play to see what they are and how they’ll change the lives of our characters.</p>
-<h1>How to Use This Book</h1>
-<p class="NoIndent">This book is going to teach you how to play Dungeon World. If you’re going to be the GM, you’re going to need to read the whole thing, though you can skim through the monster stats for now and save the Advanced Delving chapter for later. Try printing the play aids too, they’ll help you see what’s most important. If you’re a player, you might not need to read more than Playing the Game—a lot of the rules in Dungeon World will be contained in the character sheets you use during the game itself. You’ll come back to the text a few times throughout your game to refer to certain rules, but it should be a rare occasion.</p>
-<h1>Setting Up</h1>
-<p class="NoIndent">To play Dungeon World, you’ll need to gather yourself and 2–5 friends. A group of 4 to 6, including you, is best. Choose one person to be the Game Master (GM). Everyone else will be players, taking the role of the characters in the game (we call these the player characters or PCs). As you play, the players say what their characters say, think, and do. The GM describes everything else in the world.</p>
-<p>You can play a single session or string together multiple sessions into a campaign. Plan accordingly if you plan on playing a campaign, maybe setting aside a night of the week to play. Each session will usually be a few hours and you’ll be able to start playing right away within the first session.</p>
-<p>You’ll need to print some materials. Before you start a new game, find or print off at least:</p>
-<ul><li>A few copies of the basic and special moves</li>
-<li>One copy of each class sheet</li>
-<li>One copy each of the cleric and wizard spell sheets</li>
-<li>One copy of the adventure sheet and GM moves</li>
-<li>Miscellanea such as: pens and pencils, scrap paper for maps and notes, maybe some index cards</li></ul>
-<p class="NoIndent">Everyone at the table will need something to write with and some six-sided dice. Two dice is the minimum but two dice per player is a good idea.</p>
-<p>You’ll also need some specialized dice: four-sided, eight-sided, ten-sided and twelve-sided. One of each is enough but more is better: you won’t have to pass them around so much.</p>
-<h1>What’s Dungeon World Like to Play?</h1>
-<p class="NoIndent">Playing Dungeon World is all about finding out what happens when your characters encounter dangerous and exciting monsters, strange ruins, and unusual people on their quest for gold and glory. It’s a conversation between the players and the GM—the GM tells the players what they see and hear in the world around them and the players say what their characters are thinking, feeling, and doing. Sometimes those descriptions will trigger a move—something that’ll cause everyone to stop and say “time to roll the dice to see what happens.” For a moment everyone hangs on the edges of their seats as the dice clatter to a stop. Tension and excitement are always the result, no matter how the dice land.</p> 
-<p>As you play your characters they’ll change from their adventures and gain experience while learning about the world, overcoming monsters, and gathering riches. You’ll discover how they feel about each other and where their moral compass points them. When they accrue enough experience they’ll gain levels, becoming more powerful and having more options to explore.</p>
-<p>You can play Dungeon World with the same group, session to session, over a long series of adventures, watching your characters change and grow together. You can play it as a self-contained game in a single-session, too. Whether a long campaign or a one-shot, Dungeon World’s rules are here to guide you and help you create a world of fantasy adventure. Time to get out there and explore it!</p>
+
+<h1>為什麼？</h1>
+<p class="NoIndent">為什麼要玩地城世界？</p>
+<p>
+	首先，是為了見證角色們做出<strong>令人驚嘆的壯舉</strong>；為了看著他們探索未知的世界、消滅不死邪物，上窮碧落下黃泉；也為了見證他們參與歷史性的時刻或宏大悲劇之中。</p>
+<p>
+	其次，是為了看他們<strong>共同奮鬥</strong>。即便彼此有許多不同，但角色們依然組成了隊伍．團結一心對抗敵人，他們或為了寶藏而爭吵、為了擬定作戰計畫而爭論，但也會在歷經艱困勝利後共同舉杯慶祝。</p>
+<p>
+	最後，是因為<strong>這個世界仍有許多地方等待著被一探究竟</strong>。人跡罕至的古墓與巨龍的財寶沉睡在偏遠之地，等待眼明手快、身強體壯的冒險者讓它們重見天日。這個尚未被探索的世界有著它自己的計畫，而你必須實際玩下去才能知道它的樣貌，以及它會如何改變我們角色們的生活。</p>
+
+<h1>如何使用本站？</h1>
+<p class="NoIndent">
+	本站將會教導你如何遊玩地城世界。如果你要擔任GM，那麼你需要完整閱讀過全部的章節，但你可以暫時先簡單瀏覽怪物數據的部分，並之後再深入閱讀「深入鑽研」章節的內容。也試著把遊戲輔助紙列印出來，這可以幫助你確認遊戲中最重要的要素是什麼。如果你是擔任玩家，那麼也許你只需要讀到「遊玩遊戲」章節就好──地城世界中的許多規則都已經被包含在你所使用的角色卡當中。你只會偶爾需要為了確認某個規則，而回過頭來查閱這些篇章。</p>
+
+<h1>事前準備</h1>
+<p class="NoIndent">
+	在遊玩地城世界之前，你會需要先集結你和2-5位朋友。包含你在內，4到6人的團體會是最理想的人數。其中一個人將擔任遊戲主持人（GM）。其他人則做為玩家，各自扮演遊戲中的一名角色（我們把這些玩家角色稱為PC）。當你們進行遊戲，玩家們將描述自己角色口中所言、心中所想、以及實際做出的行為舉動，而GM則負責描述整個世界的一切其他事物。</p>
+<p>
+	你們可以只進行一次聚會、或將多次聚會的內容串連成一場戰役。如果你們打算進行一場戰役，那麼你們也需要做好相應的準備，像是在每週空出固定一晚的時間來參與遊戲。每次聚會通常都會花上數小時的時間，而你們在第一次聚會時就能馬上開始進行遊戲。</p>
+<p>
+	你會需要列印一些東西。在你們開始新遊戲之前，至少準備或列印好以下的東西：</p>
+<ul>
+	<li>基本動作和特殊動作的影印本數份</li>
+	<li>每個職業的角色卡各一份</li>
+	<li>牧師和法師的法術列表各一份</li>
+	<li>冒險紀錄紙和GM動作的影印本各一份</li>
+	<li>其他雜物，像是：鋼筆和鉛筆、用來畫地圖或筆記的廢紙、也許再準備幾張索引卡</li></ul>
+<p class="NoIndent">
+	每個參與遊戲的玩家都會需要一些用來書寫的紙筆、以及幾顆六面骰。你們至少要準備兩顆六面骰，而理想狀況會是每位玩家都擁有兩顆六面骰。</p>
+<p>
+	你們同時也會需要準備一些特殊的骰子：四面骰、八面骰、十面骰、和十二面骰。每種一個就已經足夠，但多準備一些會更好，這樣你就不必將骰子遞來遞去。</p>
+
+<h1>地城世界玩起來會是什麼樣子？</h1>
+<p class="NoIndent">
+	地城世界這款遊戲永遠著重角色們的遭遇和發展，當他們面對危險刺激的怪物和威脅、古怪詭譎的廢墟遺跡、其他追尋著財富與榮耀的不凡之人時，又將會發生什麼樣的故事。這是一場玩家與GM之間的對話──GM會告訴玩家，他們在那個世界當中看到了什麼、聽到了什麼，而玩家們則會描述他們角色的想法、感覺、以及行為舉止。有時候這些敘述會觸發一個動作── 一個讓所有人都停下來，並說出「該是時候擲骰決定接下來會如何發展了」的事物。在這時候，所有人都將前傾他們坐在椅子上的身體，盯著在桌上滾動的骰子直到它終於停下。無論骰子結果為何，它永遠會帶來戲劇張力與刺激感。</p> 
+<p>
+	隨著遊戲進行，你的角色將會因為遭遇的冒險而改變，並在學習到未知世界的情報、克服怪物和威脅、以及蒐集寶藏的過程中獲得經驗。你們將發掘出他們看待彼此的方式、並見證他們的道德理念將把他們帶到什麼方向去。當他們獲得了足夠的經驗，他們將會升級，變得更加強大，並且在探索世界時得到更多行動的選項。</p>
+<p>
+	你可以和同一群人持續經歷一場又一場的地城世界遊戲，在漫長的冒險旅途中看著角色們蛻變茁壯。你們也可以遊玩一場單次聚會便自我完結的短團，在幾個小時內經歷完整的遊戲體驗。無論是漫長的戰役或單次聚會短團，地城世界的規則都能引導並幫助你創造一個滿載奇幻冒險的世界。現在，該是時候出發探索它了！</p>
 
           </div>
        </div>
