--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Monsters | 地城世界 HTML SRD</title>
+  <title>怪物 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -113,30 +113,52 @@
           <div class="col-md-8 col-md-offset-1">
              
 
-<h1>Monsters</h1>
-<p class="NoIndent">Great heroes need horrendous antagonists. This section is about how to create and play as those antagonists—from the lowly goblin warrior to the hellish demon.</p>
-<h2>Using Monsters</h2>
-<p class="NoIndent">A monster is any living (or undead) thing that stands in the characters’ way.</p>
-<p>How you use these monsters follows directly from your agenda and principles. Stay true to your principles, use your moves and pursue your agenda—you can’t go wrong. </p>
-<p>Your first agenda is to <em>portray a fantastic world</em>. The way you describe the monsters and adversaries the characters face can be a tool to help you fulfill that agenda. Describing those creatures and people in vivid detail will bring them to life. You’ll eventually need some stats for those monsters, too—the rules in this chapter are here to help you create those stats quickly and easily.</p>
-<p>The player characters are the heroes. Monsters exist to illustrate what a dangerous awful place Dungeon World can be—how it will remain if the heroes don’t step in. You shouldn’t be rooting for the monsters to win, but they may challenge, and even sometimes defeat, the heroes. If you feel like your monsters are being beaten too quickly, don’t worry. Let the players revel in their victory, there’s always more monsters.</p>
-<p>The principle of <em>think dangerous</em> sums up that philosophy—think of every monster like an arrow fired at the characters. The monsters are ammunition of the danger you’re presenting. Some may be smarter, faster, or more dangerous than others but until a monster warrants a name, a personality, or some other special consideration, it’s an arrow. Take aim and shoot. Don’t worry if you miss.</p>
-<p>A monster stops being mere ammunition when something in the world puts the spotlight on it. This might be a spout lore roll that leads your description in an interesting direction or the result of your asking questions and building on the players’ answers. Maybe the characters were overwhelmed in battle and had to run away, giving them a new-found fear and respect for the beast they fought. When these things happen, feel free to give the monster a name and consider creating a danger to represent it.</p>
-<p>One thing that your agenda and principles don’t say anything about is setting up a fair fight. Heroes are often outnumbered or faced with ridiculous odds—sometimes they have to retreat and make a new plan. Sometimes they suffer loss. When adding a monster to a front, placing them in a dungeon, or making them up on the fly your first responsibility is to the fiction (<em>portray a fantastic world</em>) and to give the characters a real threat (<em>make the characters heroes</em>), not to make a balanced fight. Dungeon World isn’t about balancing encounter levels or counting experience points; it’s about adventure and death-defying feats!</p>
-<h2>Elements of a Monster</h2>
-<p class="NoIndent">Every monster has <strong>moves</strong> that describe its behavior and abilities. Just like the normal GM moves, they’re things that you do when there’s a lull in the action or when the players give you a golden opportunity. As with other GM moves they can be hard or soft depending on the circumstances and the move: a move that’s irreversible and immediate is hard, a move that’s impending or easy to counter is soft.</p>
-<p>Each monster has an <strong>instinct</strong> that describe its goals at a high level. Some monsters live for conquest, or treasure, or simply for blood. The monster’s instinct is the guide to how to use it in the fiction.</p>
-<p>The monster’s <strong>description</strong> is where all its other features come from. The description is how you know what the monster really is, the other elements just reflect the description.</p>
-<p><strong>Damage</strong> is a measure of how much pain the monster can inflict at once. Just like player damage it’s a die to roll, maybe with some modifiers. A monster deals its damage to another monster or a player whenever it causes them physical harm.</p>
-<p>Each monster has <strong>tags</strong> that describe how it deals damage, including the range(s) of its attacks. When trying to attack something out of its range (too close or too far) the monster’s out of luck, no damage. Any tag that can go on a weapon (like messy or slow) can also go on a monster.</p>
-<p>There are special tags that apply only to monsters. These tags, listed below, describe the key attributes of the monster—qualities that describe how big they are and how, if at all, they organize themselves.</p>
-<p>A monster’s <strong>HP</strong> is a measure of how much damage it can take before it dies. Just like players, when a monster takes damage it subtracts that amount from its HP. At 0 HP it’s dead, no last breath.</p>
-<p>Some monsters are lucky enough to enjoy <strong>armor</strong>. It’s just like player armor: when a monster with armor takes damage it subtracts its armor from the damage done.</p>
-<p><strong>Special qualities</strong> describe innate aspects of the monster that are important to play. These are a guide to the fiction, and therefore the moves. A quality like intangible means just what it says: mundane stuff just passes through it. That means swinging a mundane sword at it isn’t hack and slash, for a start.</p>
-<h3>Monsters Without Stats</h3>
+<h1>怪物</h1>
+<p class="NoIndent">
+	惟有駭人可怖的敵人，方能成就偉大的英雄。這個章節是關於如何創造和扮演這些敵人──從卑賤的哥布林戰士、到恐怖的煉獄惡魔。</p>
+<hr/>
+
+<h2>使用怪物</h2>
+<p class="NoIndent">
+	怪物泛指任何阻擋在角色們面前的活物（或不死生物）。</p>
+<p>
+	你運用這些怪物的方式將完全遵循你的目標事項和原則。忠於你的原則、使用你的動作、並追求達成你的目標事項──你就不會出錯。</p>
+<p>
+	你的第一個目標事項是<strong>「描繪出一個奇幻世界」</strong>，而你描述怪物和任何敵手的手法也將成為幫助你達成這條目標事項的絕佳工具。透過生動地描述這些生物和人們的細節，你將賦予他們生命。最終你也會需要為這些怪物設定一些屬性和數值──本章中記載的規則將協助你輕鬆快速地填寫它們。</p>
+<p>
+	怪物的存在說明了地城世界是個多麼可怕危險的場所──如果身為英雄們的玩家角色不介入其中，它也將一直是如此。儘管你不應該聲援怪物們去獲得勝利，但牠們確實會去挑戰、甚至有時候擊敗這些英雄。若你覺得你安排的怪物被擊潰的速度似乎有些太快，不用擔心。讓玩家們為他們的勝利狂歡吧，因為這裡永遠會有更多更多的怪物等著他們去挑戰。</p>
+<p>
+	<strong>「構思危險」</strong>原則概括了這種思考哲學──把每個怪物都想成是一支朝著角色們射去的箭矢。這些怪物就是你安排危害中等待著被你使用的子彈。牠們有些可能比其他怪物更聰明、更迅速、或更危險，但直到一頭怪物獲得了名字、性格、或出於某些其他特殊考量之前，牠都只不過是一支箭矢。瞄準玩家並射出，就算射偏了也不用擔心。</p>
+<p>
+	只有當這個世界將聚光燈照在這頭怪物身上時，這頭怪物才會脫離牠身為箭矢的身分。這可能會是因為一次憶述見聞的檢定讓你為牠添加了某些更加有趣的敘述、或者源自你提問並基於玩家回答而建立起來的結果。也許角色們在戰鬥中被擊潰，不得不選擇逃跑，並因此對這頭打敗他們的野獸產生恐懼和敬意。當這種事情發生時，你就可以隨手為這頭怪物取一個名字，並考慮創建一個代表這頭怪物的危害，賦予牠全新的存在意義。</p>
+<p>
+	記住，你的目標事項和原則完全沒有提到你需要安排公平對等的戰鬥。英雄們經常會陷入寡不敵眾、或甚至需要面對勝算渺小的荒謬窘境──有時候他們必須撤退並擬定新的計畫，有時候他們會承受敗北。當你把怪物添加到前置中、把牠們放進地城裡、或在遊戲過程中臨時創造牠們時，你的首要責任就是編織出故事事實（<strong>描繪出一個奇幻世界</strong>），並讓角色們面對真正的威脅（<strong>讓角色們成為英雄</strong>），而不是營造出一場勢均力敵的戰鬥。地城世界並不在乎遭遇難度的平衡與否或經驗值的計算；它在乎的是冒險、以及不畏死亡的壯舉！</p>
+<hr/>
+
+<h2>怪物的要素 (Elements of a Monster)</h2>
+<p class="NoIndent">
+	每個怪物都有著屬於自己的<strong>動作</strong>，用以描述牠的行為舉止和能力。和GM動作一樣，這些動作是你在行動歇止、或當玩家們提供你黃金時機時用來推進劇情的工具。就如同其他GM動作，它們同樣可以根據當下情境和動作類型而有硬動作和軟動作的分別：一個即時且不可逆的發展屬於硬動作，而一個逐漸迫近或容易對付的動作則屬於軟動作。</p>
+<p>
+	每個怪物也都擁有自己的<strong>本能</strong>，說明了牠更高層次的目標追求。某些怪物活著就是為了征服、為了財寶、或只是單純渴求鮮血。怪物的本能就是用來指導你該如何在故事中使用這些怪物。</p>
+<p>
+	怪物的<strong>說明文字</strong>正是牠所有其他特徵的來源。這些說明文字能夠讓你清楚知道這個怪物到底是什麼樣子，而這個怪物身上所有其他的要素，都只不過是反映出了這些說明文字所營造的事實罷了。</p>
+<p>
+	<strong>傷害</strong>被用來衡量怪物一次能造成多大程度的苦痛。就跟玩家的傷害一樣，這個數值代表著要擲的骰子，或許還會再加上一些修正值。每當這個怪物導致玩家或另一頭怪物承受身體創傷時，牠就能對其造成等同其傷害數值的傷害。</p>
+<p>
+	每個怪物都帶有不同的<strong>標籤</strong>，用以描述牠是如何造成傷害的，這同時也包括了定義牠攻擊手段的影響範圍。當怪物嘗試攻擊那些超出牠攻擊範圍的目標時（無論太近或太遠），那很不幸的，牠不會造成任何傷害。任何可以應用在武器上的標籤（像是<tag>毀亂</tag>或<tag>緩慢</tag>）也都同樣能被應用在怪物身上。</p>
+<p>
+	除此之外還存在著其他一些只能被應用在怪物身上的特殊標籤。這些標籤（參見後述的怪物標籤段落）被用來描述怪物身上的那些關鍵特質──比方說，用來描述牠們的體型有多大、或者，若他們是集體行動的話，牠們又是如何組織成群。</p>
+<p>
+	怪物的<strong>生命值(HP)</strong>被用來衡量牠在死亡之前可以承受多少的傷害。就跟玩家一樣，當怪物受到傷害時，牠的生命值將會減去等同該傷害的數值。一旦怪物的生命值歸零，牠就此死去，不需要擲骰進行臨死一息的動作。</p>
+<p>
+	有些怪物可能足夠幸運去享有<strong>護甲</strong>帶來的好處。它的作用方式就跟玩家身上的護甲一樣：當擁有護甲的怪物受到傷害時，牠會先把受到的傷害減去等同護甲值的數值。</p>
+<p>最後，<strong>特性</strong>則被用來描述怪物身上那些與生俱來的重要特質。它們是你建構敘事情節時的指南，也是你使用動作時的依據。比如說，像「縹緲無形」這個特性就代表著字面上的意思：尋常物品將會如同穿過空氣一樣穿過它，這也同時意味著朝牠揮舞一把尋常寶劍並不會因此觸發砍劈動作──因為你無法對牠造成任何傷害。</p>
+
+<h3>沒有數值的怪物 (Monsters Without Stats)</h3>
 <p class="NoIndent">Some creatures operate on a scale so far beyond the mortal that concepts like HP, armor, and damage just do not hold. Some creatures just aren’t dangerous in a fight. These creatures may still cause problems for the players and may even be defeated with clever thinking and enough preparation.</p>
 <p>If a creature is of such a scale far beyond the players, or if it just doesn’t put up a physical fight, don’t assign it HP, damage, or armor. You can still use the monster creation rules to give it tags. The core of a stat-less monster is its instinct and moves; you can have it make its moves and act according to its instinct even without numeric stats.</p>
 <hr/>
+
 <h2>怪物標籤 (Monster Tags)</h2>
 <p class="NoIndent"><tag>魔法 (Magical)</tag>: 牠全身上下都是與生俱來的魔法。</p>
 <p class="NoIndent"><tag>狡猾 (Devious)</tag>: 牠最主要的威脅並不在於單純的戰鬥衝突。</p>
