--- a/classes/paladin/index.html
+++ b/classes/paladin/index.html
@@ -132,6 +132,7 @@
 <h2>屬性數值</h2>
 <p class="NoIndent">你的最大生命值為 10+體質值。</p>
 <p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d10</span>。</p>
+<p class="NoIndent">將以下數值分配到你的屬性上: 16 (+2), 15 (+1), 13 (+1), 12 (+0), 9 (+0), 8 (-1)</p>
 <hr/>
 <h2>起始動作</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">你是人類，因此你獲得這個動作：</p>
