--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -126,7 +126,7 @@
 	<li>每個職業的角色卡各一份，雙面印刷</li>
 	<li>牧師和法師的法術列表各一份，雙面印刷</li>
 	<li>GM參考紙</li></ul>
-<p>你可以從這裡下載：<a href="https://drive.google.com/file/d/0B8_Fz4m5hcoieW1GRVVaNnRfbnc/view">官網連結</a></p>
+<p>你可以從這裡下載：<a href="https://drive.google.com/file/d/0B8_Fz4m5hcoieW1GRVVaNnRfbnc/view" target="_blank">官網連結</a> | <a href="https://drive.google.com/open?id=1wtc4XlVjhM0uZEG6KwUfRo3Eyle0FPCN" target="_blank">中文翻譯版</a></p>
 <p class="NoIndent">
 	你也需要讀過這整個網站的內容，特別是GM章節（GM動作）和基本動作的部分。熟悉各個職業的職業動作也是個好主意，這讓你能夠預先做好準備。尤其要確保你已經理解了關於「前置」的規則，但先不要創建它們。</p>
 <p>
