--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -135,7 +135,7 @@
 	記住，你的目標事項和原則完全沒有提到你需要安排公平對等的戰鬥。英雄們經常會陷入寡不敵眾、或甚至需要面對勝算渺小的荒謬窘境──有時候他們必須撤退並擬定新的計畫，有時候他們會承受敗北。當你把怪物添加到前置中、把牠們放進地城裡、或在遊戲過程中臨時創造牠們時，你的首要責任就是編織出故事事實（<strong>描繪出一個奇幻世界</strong>），並讓角色們面對真正的威脅（<strong>讓角色們成為英雄</strong>），而不是營造出一場勢均力敵的戰鬥。地城世界並不在乎遭遇難度的平衡與否或經驗值的計算；它在乎的是冒險、以及不畏死亡的壯舉！</p>
 <hr/>
 
-<h2>怪物的要素 (Elements of a Monster)</h2>
+<h2>怪物的要素</h2>
 <p class="NoIndent">
 	每個怪物都有著屬於自己的<strong>動作</strong>，用以描述牠的行為舉止和能力。和GM動作一樣，這些動作是你在行動歇止、或當玩家們提供你黃金時機時用來推進劇情的工具。就如同其他GM動作，它們同樣可以根據當下情境和動作類型而有硬動作和軟動作的分別：一個即時且不可逆的發展屬於硬動作，而一個逐漸迫近或容易對付的動作則屬於軟動作。</p>
 <p>
@@ -154,9 +154,11 @@
 	有些怪物可能足夠幸運去享有<strong>護甲</strong>帶來的好處。它的作用方式就跟玩家身上的護甲一樣：當擁有護甲的怪物受到傷害時，牠會先把受到的傷害減去等同護甲值的數值。</p>
 <p>最後，<strong>特性</strong>則被用來描述怪物身上那些與生俱來的重要特質。它們是你建構敘事情節時的指南，也是你使用動作時的依據。比如說，像「縹緲無形」這個特性就代表著字面上的意思：尋常物品將會如同穿過空氣一樣穿過它，這也同時意味著朝牠揮舞一把尋常寶劍並不會因此觸發砍劈動作──因為你無法對牠造成任何傷害。</p>
 
-<h3>沒有數值的怪物 (Monsters Without Stats)</h3>
-<p class="NoIndent">Some creatures operate on a scale so far beyond the mortal that concepts like HP, armor, and damage just do not hold. Some creatures just aren’t dangerous in a fight. These creatures may still cause problems for the players and may even be defeated with clever thinking and enough preparation.</p>
-<p>If a creature is of such a scale far beyond the players, or if it just doesn’t put up a physical fight, don’t assign it HP, damage, or armor. You can still use the monster creation rules to give it tags. The core of a stat-less monster is its instinct and moves; you can have it make its moves and act according to its instinct even without numeric stats.</p>
+<h3>沒有數值的怪物</h3>
+<p class="NoIndent">
+	有些生物的層級早已超過了凡人所能理解的程度，以至於生命值、護甲、和傷害這類概念根本無法適用於牠們。有些生物則正好相反，牠們在戰鬥中不會產生絲毫的危險性。儘管如此，這些生物仍可能會為玩家們帶來麻煩，且甚至可能透過機智計謀和充足準備而被擊敗。</p>
+<p>
+	若某個生物遠遠超出了玩家們所能應付的層級、或者牠根本無法參與戰鬥，那麼不要為牠設定生命值、傷害、或護甲值。你仍然可以利用創建怪物的規則來為牠添加其他標籤和設定。這類沒有數值的怪物的核心就在於<b>本能</b>和<b>動作</b>；即使沒有那些數值性的設定，你仍然可以讓牠進行怪物動作、並根據牠的本能來採取各種行動。</p>
 <hr/>
 
 <h2>怪物標籤 (Monster Tags)</h2>
@@ -188,57 +190,73 @@
 <p>When you find you need stats for the monster you use this series of questions to establish them. Answer every question based on the facts established and imagined. Don’t answer them aloud to anyone else, just note down the answers and the stats listed with each answer.</p>
 <p>If two questions would grant the same tag don’t worry about it. If you like you can adjust damage or HP by 2 to reflect the tag that would be repeated, but it’s not necessary. If a combination of answers would reduce HP or damage below 1 they stay at 1.</p>
 <p>When you’re finished your monster may have only one move. If this is the case and you plan on using the monster often, give it another 1–2 moves of your choice. These moves often describe secondary modes of attack, other uses for a primary mode of attack, or connections to a certain place in the world.</p>
-<h4>What is it known to do?</h4>
-<p class="NoIndent">Write a monster move describing what it does.</p>
-<h4>What does it want that causes problems for others?</h4>
-<p class="NoIndent">This is its instinct. Write it as an intended action.</p>
-<h4>How does it usually hunt or fight?</h4>
-<ul><li>In large groups: horde, d6 damage, 3 HP</li>
-<li>In small groups, about 2–5: group, d8 damage, 6 HP</li>
-<li>All by its lonesome: solitary, d10 damage, 12 HP</li></ul>
-<h4>How big is it?</h4>
-<ul><li>Smaller than a house cat: tiny, hand, -2 damage</li>
-<li>Halfling-esque: small, close</li>
-<li>About human size: close</li>
-<li>As big as a cart: large, close, reach, +4 HP, +1 damage</li>
-<li>Much larger than a cart: huge, reach, +8 HP, +3 damage</li></ul>
-<h4>What is its most important defense?</h4>
-<ul><li>Cloth or flesh: 0 armor</li>
-<li>Leathers or thick hide: 1 armor</li>
-<li>Mail or scales: 2 armor</li>
-<li>Plate or bone: 3 armor</li>
-<li>Permanent magical protection: 4 armor, magical</li></ul>
-<h4>What is it known for? (Choose all that apply)</h4>
-<ul><li>Unrelenting strength: +2 damage, forceful</li>
-<li>Skill in offense: roll damage twice and take the better roll</li>
-<li>Skill in defense: +1 armor</li>
-<li>Deft strikes: +1 piercing</li>
-<li>Uncanny endurance: +4 HP</li>
-<li>Deceit and trickery: stealthy, write a move about dirty tricks</li>
-<li>A useful adaptation like being amphibious or having wings: Add a special quality for the adaptation</li>
-<li>The favor of the gods: divine, +2 damage or +2 HP or both (your call)</li>
-<li>Spells and magic: magical, write a move about its spells</li></ul>
-<h4>What is its most common form of attack?</h4>
-<p class="NoIndent">Note it along with the creature’s damage. Common answers include: a type of weapon, claws, a specific spell. Then answer these questions about it:</p>
-<ul><li>Its armaments are vicious and obvious: +2 damage</li>
-<li>It lets the monster keep others at bay: reach</li>
-<li>Its armaments are small and weak: reduce its damage die size by one</li>
-<li>Its armaments can slice or pierce metal: messy, +1 piercing or +3 piercing if it can just tear metal apart</li>
-<li>Armor doesn’t help with the damage it deals (due to magic, size, etc.): ignores armor</li>
-<li>It usually attacks at range (with arrows, spells, or other projectiles): near or far or both (your call)</li></ul>
-<h4>Which of these describe it? (Choose all that apply)</h4>
-<ul><li>It isn’t dangerous because of the wounds it inflicts, but for other reasons: devious, reduce its damage die size by one, write a move about why it’s dangerous</li>
-<li>It organizes into larger groups that it can call on for support: organized, write a move about calling on others for help</li>
-<li>It’s as smart as a human or thereabouts: intelligent</li>
-<li>It actively defends itself with a shield or similar: cautious, +1 Armor</li>
-<li>It collects trinkets that humans would consider valuable (gold, gems, secrets): hoarder</li>
-<li>It’s from beyond this world: planar, write a move about using its otherworldly knowledge and power</li>
-<li>It’s kept alive by something beyond simple biology: +4 HP</li>
-<li>It was made by someone: construct, give it a special quality or two about its construction or purpose</li>
-<li>Its appearance is disturbing, terrible, or horrible: terrifying, write a special quality about why it’s so horrendous</li>
-<li>It doesn’t have organs or discernible anatomy: amorphous, +1 Armor, +3 HP</li>
-<li>It (or its species) is ancient—older than man, elves, and dwarves:  increase its damage die size by one</li>
-<li>It abhors violence: roll damage twice and take the worst result</li></ul>
+
+<h4>牠以會採取什麼樣的行為而聞名？</h4>
+<p>寫下一個<strong>怪物動作</strong>，描述牠會做什麼事情。</p>
+
+<h4>牠想要的什麼東西會因此導致其他人的麻煩？</h4>
+<p>這代表著牠的<strong>本能</strong>。將它寫成一個有意採取的行為。</p>
+
+<h4>牠通常會如何狩獵或戰鬥？</h4>
+<ul class="tagList">
+	<li>以大群體行動: <tag class="blue">成群</tag> <tag class="line">d6 傷害</tag> <tag class="line">3HP</tag></li>
+	<li>以小團體行動，大約2-5人:  <tag class="blue">集團</tag> <tag class="line">d8 傷害</tag> <tag class="line">6 HP</tag></li>
+	<li>獨自行動:  <tag class="blue">單獨</tag> <tag class="line">d10 傷害</tag> <tag class="line">12 HP</tag></li></ul>
+
+<h4>牠有多大？</h4>
+<ul class="tagList">
+	<li>比家貓還要小: <tag class="green">微型</tag> <tag class="red">觸及</tag> <tag class="line">-2 傷害</tag></li>
+	<li>與半身人相當: <tag class="green">小型</tag> <tag class="red">近身</tag></li>
+	<li>約莫人類大小: <tag class="red">近身</tag></li>
+	<li>和馬車一樣大: <tag class="green">大型</tag> <tag class="red">近身</tag> <tag class="red">及遠</tag> <tag class="line">+4 HP</tag> <tag class="line">+1傷害</tag></li>
+	<li>比馬車還要大上許多: <tag class="green">巨型</tag> <tag class="red">及遠</tag> <tag class="line">+8 HP</tag> <tag class="line">+3 傷害</tag></li></ul>
+
+<h4>牠最主要的防禦是什麼？</h4>
+<ul class="tagList">
+	<li>布料或血肉: <tag class="line">0 護甲</tag></li>
+	<li>皮革或厚皮: <tag class="line">1 護甲</tag></li>
+	<li>鎖子甲或鱗片: <tag class="line">2 護甲</tag></li>
+	<li>板甲或骨骼: <tag class="line">3 護甲</tag></li>
+	<li>永久性的魔法防護: <tag class="line">4 護甲</tag> <tag>魔法</tag></li></ul>
+
+<h4>牠以什麼聞名？ (選擇所有符合的項目)</h4>
+<ul class="tagList">
+	<li>無情的怪力: <tag class="line">+2 傷害</tag> <tag>強力</tag></li>
+	<li>攻擊技巧: 擲兩次傷害骰，取高</li>
+	<li>防禦技巧: <tag class="line">+1 護甲</tag></li>
+	<li>機敏熟練的打擊: <tag>+1 穿透</tag></li>
+	<li>非同尋常的耐久力: <tag class="line">+4 HP</tag></li>
+	<li>奸詐而狡猾: <tag>隱匿</tag>, 寫下一個關於骯髒詭計的<strong>動作</strong></li>
+	<li>一個實用的環境適性，像是兩棲能力或擁有翅膀: 添加一個代表該環境適性的<strong>特性</strong></li>
+	<li>諸神的恩惠: <tag>神聖</tag> <tag class="line">+2 damage</tag> 或 <tag class="line">+2 HP</tag> 或 兩者兼具（由你決定）</li>
+	<li>法術與魔法: <tag>魔法</tag> 寫下一個關於牠法術的<strong>動作</strong></li></ul>
+
+<h4>牠最常見的攻擊形式是什麼？</h4>
+<p class="NoIndent">要注意這連帶著該生物的傷害。常見的攻擊形式包括：一種武器、利爪、特定法術。接著回答下列這些問題：</p>
+<ul class="tagList">
+	<li>牠的武器相當兇惡且明顯: <tag class="line">+2 傷害</tag></li>
+	<li>它讓怪物能夠與對手保持距離: <tag class="red">及遠</tag></li>
+	<li>牠的武器小巧而孱弱： 將傷害骰的骰面降低一個等級</li>
+	<li>牠的武器可以切斷或刺穿金屬: <tag>毀亂</tag>; <tag>+1 穿透</tag> 或若它可以撕裂金屬則 <tag>+3 穿透</tag></li>
+	<li>護甲無法阻止牠造成的傷害（也許因為魔法、尺寸等因素）: <tag>無視護甲</tag></li>
+	<li>牠通常會從遠距離攻擊（透過箭矢、法術、或其他投射物）: <tag class="red">短程</tag> 或 <tag class="red">遠程</tag> 或 兩者兼具（由你決定）</li></ul>
+
+<h4>下列哪些句子可以拿來描述牠？ (選擇所有符合的項目)</h4>
+<ul class="tagList">
+	<li>牠的危險性並不在於它能造成的創傷，而是出於其他原因: <tag>狡猾</tag>, 將傷害骰的骰面降低一個等級, 寫下一個讓牠之所以危險的<strong>動作</strong></li>
+	<li>牠組織成一個更大的群體，並因此可以呼叫增援: <tag>組織</tag>, 寫下一個關於呼叫他人支援的<strong>動作</strong></li>
+	<li>牠與人類一樣聰明: <tag>聰穎</tag></li>
+	<li>牠會積極使用盾牌或類似物件來保護自己: <tag>謹慎</tag>, <tag class="line">+1 護甲</tag></li>
+	<li>牠會收集那些在人類眼中具有價值的小玩意兒（黃金、珠寶、秘密）: <tag>囤財者</tag></li>
+	<li>牠來自超乎這個世界之外的某處: <tag>異位面</tag>, 寫下一個關於牠運用異界知識和力量的<strong>動作</strong></li>
+	<li>牠透過某種超乎生物學機制的事物而得以維生: <tag class="line">+4 HP</tag></li>
+	<li>牠是被某人製造出來的: <tag>構裝體</tag>, 給牠一或二個關於其軀體結構或製造用途的<strong>特性</strong></li>
+	<li>牠的外觀令人不安、厭惡、或恐懼: <tag>駭人</tag>, 寫下一個關於讓牠之所以如此可怕的<strong>特性</strong></li>
+	<li>牠並沒有任何器官或可辨識的身體構造: <tag>不定型</tag>, <tag class="line">+1 護甲</tag>, <tag class="line">+3 HP</tag></li>
+	<li>牠(或牠的族類)相當古老──遠比人類、精靈、和矮人還要古老: 將傷害骰的骰面提升一個等級</li>
+	<li>牠厭惡暴力行動: 擲兩次傷害骰，取低</li></ul>
+<hr/>
+
 <h2>Treasure</h2>
 <p class="NoIndent">Monsters, much like adventurers, collect shiny useful things. When the players search the belongings of a monster (be they on their person or tucked away somewhere) describe them honestly.</p>
 <p class="NoIndent">If the monster has accumulated some wealth you can roll that randomly. Start with the monster’s damage die, modified if the monster is:</p>
@@ -268,6 +286,8 @@
 <li class="NumberedList">A portal or secret path (or directions to one) and roll again</li>
 <li class="NumberedList">Something relating to one of the characters and roll again</li>
 <li class="NumberedList">A hoard: 1d10×1000 coins and 1d10×10 gems worth 2d6×100 each</li></ol>
+<hr/>
+
 <h2>Monster Settings</h2>
 <p class="NoIndent">The monsters in this book are presented in <em>monster settings</em>. A monster setting is a type of location and the monsters you might find there. It’s a way of grouping monsters by where they fit in the world. A monster setting tells you what kind of monsters might inhabit an area while your fronts tell you what monsters are working together or have ongoing plots.</p>
 <p>When creating your own monster settings, they can be more specific. You could create a monster setting for the Great Western Steppes or the Domains of the Horse Lords.</p>
